[package]
name = "asn1-compiler"
version = "0.5.8"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"
description = "ASN.1 Compiler in Rust."
keywords = ["asn1", "per"]
repository = "https://github.com/gabhijit/hampi.git"
license = "Apache-2.0 OR MIT"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "ARChITECTURE.md", "Cargo.toml", "LICENSE", "LICENSE-MIT", "LICENSE-Apache2"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = { version = "1.4.0" }
topological-sort = { version = "0.1" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
heck = { version = "0.4" }
bitvec = { version = "1.0" }
clap = { version = "4.0.10", features = ["derive"] }
docx-rs = { version = "0.4.5" , optional = true }
regex = { version = "1.6.0" }
log = { version = "0.4" }
env_logger = { version = "0.10" }

[features]
rs-specs-gen = [ "docx-rs"]

[[bin]]
name = "hampi-rs-asn1c"
path = "src/bin/hampi-rs-asn1c.rs"

[[bin]]
name = "extract-asn-spec"
required-features = ["rs-specs-gen"]
path = "src/bin/extract-asn-spec.rs"
