[package]
name = "asn-codecs"
version = "0.1.0"
description = "ASN.1 Codecs for Rust Types."
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
keywords = ["asn1", "per", "decoder", "encoder"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/gabhijit/hampi.git"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "LICENSE-MIT", "LICENSE-Apache2"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitvec = { version = "0.22" }
syn = { version = "1.0" }
proc-macro2 = { version = "1.0" }
