[package]
name = "asn1-codecs"
version = "0.5.8"
description = "ASN.1 Codecs for Rust Types representing ASN.1 Types."
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
keywords = ["asn1", "per", "decoder", "encoder"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/gabhijit/hampi.git"
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "LICENSE-MIT", "LICENSE-Apache2", "README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitvec = { version = "1.0" }
syn = { version = "1.0" }
proc-macro2 = { version = "1.0" }
log = { version = "0.4", features = ["release_max_level_info"] }
