[package]
name = "asn1_codecs_derive"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
description = "ASN.1 Codecs derive Macros"
keywords = ["asn1", "per"]
version = "0.5.2"
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/gabhijit/hampi.git"
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "LICENSE-MIT", "LICENSE-Apache2", "README.md"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
log = { version = "0.4" }
asn1-codecs = { path = "../codecs" , version = "=0.5.2"}
bitvec = { version = "1.0" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0" , features = ["extra-traits"]}

[dev-dependencies]
trybuild = { version = "1.0" }
hex =  { version = "0.4" }
