[package]
name = "hampi-examples"
version = "0.0.0"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"
publish = false


[dev-dependencies]
asn1-codecs = { path = "../codecs" }
asn1_codecs_derive = { path = "../codecs_derive" }
trybuild = { version = "1.0" }
hex = { version = "0.4" }
bitvec = { version = "1.0" }
log = { version = "0.4" }
criterion = { version = "0.3" }
env_logger = { version = "0.4" }

[[bench]]
name = "ngap_bench"
harness = false
