[package]
name = "hampi-examples"
version = "0.2.0"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"
description = "Examples for usage of ASN.1 Compiler and Codecs."
publish = false

[build-dependencies]
asn1-compiler = { path = "../asn-compiler", version = "=0.3.0" }

[dev-dependencies]
asn1-codecs = { path = "../codecs", version = "=0.3.0" }
asn1_codecs_derive = { path = "../codecs_derive", version = "=0.3.0" }
trybuild = { version = "1.0" }
hex = { version = "0.4" }
bitvec = { version = "1.0" , features = ["serde"]}
log = { version = "0.4" }
criterion = { version = "0.3" }
env_logger = { version = "0.4" }
serde = { version = "1.0" , features = ["derive"]}

[[bench]]
name = "ngap_bench"
harness = false
